--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.25.0",
     "react-tsparticles": "^1.37.5",
+    "react-use-websocket": "^3.0.0",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
