--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "gatsby-plugin-styled-components": "^5.5.0",
     "gatsby-source-filesystem": "^4.3.0",
     "gatsby-transformer-sharp": "^4.3.0",
+    "js-base64": "^3.7.2",
     "jwt-decode": "^3.1.2",
     "prop-types": "^15.8.1",
     "react": "^17.0.1",
@@ -42,8 +43,12 @@
   "devDependencies": {
     "babel-jest": "^27.5.1",
     "babel-preset-gatsby": "^2.7.0",
-    "eslint": "^8.8.0",
-    "eslint-plugin-react": "^7.28.0",
+    "eslint": "^8.17.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-n": "^15.2.3",
+    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-react": "^7.30.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.5.1",
     "react-test-renderer": "^17.0.2",
